# rocode

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SERDE_JSON_C_DECISIONS.md  USER_GUIDE.md
crates/rocode-agent/: Cargo.toml
crates/rocode-agent/src/: message.rs
crates/rocode-agent/src/agent/: config_apply.rs  mod.rs  registry.rs  types.rs
crates/rocode-agent/src/executor/: executor_adapters.rs  executor_helpers.rs  executor_sink.rs  mod.rs
crates/rocode-cli/: Cargo.toml  build.rs
crates/rocode-cli/src/: agent_cmd.rs  agent_stream_adapter.rs  api_client.rs  auth.rs  cli.rs  db.rs  debug.rs  event_stream.rs  generate.rs  github.rs  import_export.rs  main.rs  mcp_cmd.rs  providers.rs  remote.rs  run.rs  server.rs  server_lifecycle.rs  session_cmd.rs  tui.rs  upgrade.rs  util.rs
crates/rocode-cli/src/run/: frontend_state.rs  interactive_session.rs  session_projection.rs  ui_actions.rs
crates/rocode-cli/tests/: debug_docs_validate.rs
crates/rocode-command/: Cargo.toml
crates/rocode-command/commands/: init.md  start-work.md
crates/rocode-command/governance/: multi_agent_replay_fixture.json  scheduler_stage_fixture.json
crates/rocode-command/src/: agent_presenter.rs  branding.rs  cli_markdown.rs  cli_panel.rs  cli_permission.rs  cli_prompt.rs  cli_select.rs  cli_spinner.rs  cli_style.rs  governance_fixtures.rs  governance_tests.rs  interactive.rs  lib.rs  output_blocks.rs  stage_protocol.rs  start_work.rs  terminal_presentation.rs  terminal_segment_display.rs  terminal_tool_block_display.rs  terminal_tool_cli_render.rs
crates/rocode-config/: Cargo.toml
crates/rocode-config/src/: builtin_categories.rs  category.rs  instruction.rs  lib.rs  store.rs  wellknown.rs
crates/rocode-config/src/loader/: discovery.rs  file_ops.rs  markdown_parser.rs  mod.rs  tests.rs  transforms.rs
crates/rocode-config/src/schema/: merge.rs  mod.rs  plugin.rs  tests.rs
crates/rocode-content/: Cargo.toml
crates/rocode-content/src/: output_blocks.rs  stage_protocol.rs
crates/rocode-core/: Cargo.toml
crates/rocode-core/src/: agent_task_registry.rs  codec.rs  id.rs  jsonrpc.rs  lib.rs  process_registry.rs  snapshot.rs  stderr_drain.rs
crates/rocode-core/src/contracts/: agent_tasks.rs  attachments.rs  events.rs  execution.rs  fs.rs  mcp.rs  mod.rs  output_blocks.rs  patch.rs  permission.rs  plugin_hooks.rs  provider.rs  question.rs  scheduler.rs  session.rs  status.rs  task.rs  todo.rs  tools.rs  wire.rs
crates/rocode-grep/: Cargo.toml
crates/rocode-grep/src/: search.rs
crates/rocode-lsp/: Cargo.toml
crates/rocode-lsp/src/: lib.rs
crates/rocode-message/: Cargo.toml
crates/rocode-message/src/: finish.rs  id.rs  lib.rs  message.rs  message_v2.rs  part.rs  status.rs
crates/rocode-message/src/message/: bridge.rs  compaction.rs  errors.rs  mod.rs  provider.rs  session_bridge.rs  session_message.rs  types.rs
crates/rocode-orchestrator/: Cargo.toml
crates/rocode-orchestrator/src/: agent_tree.rs  conversation.rs  error.rs  error_cause.rs  execution_resolver.rs  lib.rs  lifecycle.rs  output_metadata.rs  request_execution.rs  skill_graph.rs  skill_list.rs  skill_tree.rs  system.rs  tool_runner.rs  traits.rs  types.rs
crates/rocode-orchestrator/src/prompt_templates/: beast.txt  qwen.txt  (+2 more)
crates/rocode-permission/: Cargo.toml
crates/rocode-permission/src/: engine.rs  lib.rs  matching.rs  model.rs  ruleset.rs
crates/rocode-plugin/: Cargo.toml
crates/rocode-plugin/builtin/: codex-auth.ts
crates/rocode-plugin/examples/: verify_native_dylib.rs
crates/rocode-plugin/host/: plugin-host.ts
crates/rocode-plugin/include/: rocode_plugin_abi_v1.h
crates/rocode-plugin/src/: cabi.rs  circuit_breaker.rs  feature_flags.rs  hook_io.rs  hook_names.rs  lib.rs  native.rs
crates/rocode-server/: Cargo.toml  build.rs
crates/rocode-server/src/: error.rs  lib.rs  mcp_oauth.rs  oauth.rs  recovery.rs  request_options.rs  runtime_control.rs  server.rs  stage_event_log.rs  web.rs  worktree.rs
crates/rocode-server/tests/: governance_replay.rs  web_dom_governance.rs
crates/rocode-server/web/: app.dom.test.mjs  index.html
crates/rocode-server/web-ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/rocode-session/: Cargo.toml
crates/rocode-session/src/: compaction.rs  execution.rs  instruction.rs  lib.rs  mcp_bridge.rs  message.rs  message_v2.rs  question.rs  retry.rs  revert.rs  run_status.rs  runtime_state.rs  session.rs  session_model.rs  snapshot.rs  status.rs  summary.rs  system.rs  todo.rs  tools_and_output.rs
crates/rocode-session/tests/: session_integration.rs
crates/rocode-storage/: Cargo.toml
crates/rocode-storage-migration/: Cargo.toml
crates/rocode-storage-migration/src/: compat_parts.rs  idents.rs  lib.rs  m20260317_000001_create_sessions.rs  m20260317_000002_create_messages.rs  m20260317_000003_create_parts.rs  m20260317_000004_create_todos.rs  m20260317_000006_create_session_shares.rs  m20260317_000009_migrate_tool_call_input_data.rs  m20260317_000011_add_part_todo_pagination_indexes.rs  m20260318_000012_backfill_parts_from_messages_data.rs  m20260319_000013_int_primary_keys.rs  m20260319_000014_session_shares_session_id_pk.rs  m20260320_000015_rewrite_messages_data_unified_parts.rs
crates/rocode-storage/src/: database.rs  lib.rs  repository.rs  schema.rs
crates/rocode-tool/: Cargo.toml
crates/rocode-tool/src/: apply_patch.rs  ast_grep_common.rs  ast_grep_replace.rs  ast_grep_search.rs  attachment_metadata.rs  bash.rs  batch.rs  browser_session.rs  codesearch.rs  context_docs.rs  context_docs_backend.rs  external_directory.rs  git_runtime.rs  github_research.rs  glob_tool.rs  grep_tool.rs  invalid.rs  lib.rs  ls.rs  lsp_tool.rs  media_inspect.rs  multiedit.rs  path_guard.rs  plan.rs  plugin_tool.rs  question.rs  read.rs  read.txt  registry.rs  repo_history.rs  shell_session.rs  skill.rs  task.rs  task_flow.rs  todo.rs  tool.rs  web_page.rs  webfetch.rs  websearch.rs  write.rs
crates/rocode-tui/: Cargo.toml
crates/rocode-tui/src/: api.rs  branding.rs  command.rs  event.rs  file_index.rs  lib.rs  router.rs  terminal.rs
(+387 files in other folders)
