[package]
name = "rocode-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rocode-core = { path = "../rocode-core" }
rocode-message = { path = "../rocode-message" }
rocode-types = { path = "../rocode-types" }
rocode-provider = { path = "../rocode-provider" }
rocode-permission = { path = "../rocode-permission" }
rocode-tool = { path = "../rocode-tool" }
rocode-config = { path = "../rocode-config" }
rocode-plugin = { path = "../rocode-plugin" }
rocode-orchestrator = { path = "../rocode-orchestrator" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
