[package]
name = "rocode-command"
version.workspace = true
edition = "2021"

[dependencies]
rocode-agent = { path = "../rocode-agent" }
rocode-plugin = { path = "../rocode-plugin" }
rocode-tool = { path = "../rocode-tool" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
regex = "1.10"
tracing = "0.1"
glob = "0.3"
pulldown-cmark = "0.13"
crossterm = "0.27"
unicode-width = "0.1"

chrono = { workspace = true }
uuid = { workspace = true }
