[package]
name = "rocode-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rocode-core = { path = "../rocode-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
jsonc-parser = { version = "0.29.0", features = ["serde"] }
regex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
arc-swap = { workspace = true }
toml = "0.8"
