[package]
name = "rocode-grep"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rocode-core = { path = "../rocode-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
