[package]
name = "rocode-permission"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rocode-core = { path = "../rocode-core" }
rocode-plugin = { path = "../rocode-plugin" }
glob = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
lazy_static = { workspace = true }
tokio = { workspace = true }
