[package]
name = "rocode-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rocode-core = { path = "../rocode-core" }
rocode-content = { path = "../rocode-content" }
rocode-message = { path = "../rocode-message" }
rocode-types = { path = "../rocode-types" }
rocode-util = { path = "../rocode-util" }
rocode-provider = { path = "../rocode-provider" }
rocode-orchestrator = { path = "../rocode-orchestrator" }
rocode-config = { path = "../rocode-config" }
rocode-tool = { path = "../rocode-tool" }
rocode-mcp = { path = "../rocode-mcp" }
rocode-lsp = { path = "../rocode-lsp" }
rocode-plugin = { path = "../rocode-plugin" }
rocode-permission = { path = "../rocode-permission" }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
glob = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
