[package]
name = "rocode-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rocode-core = { path = "../rocode-core" }
rocode-types = { path = "../rocode-types" }
rocode-util = { path = "../rocode-util" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
dirs = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
