[package]
name = "rocode-tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
lsp = ["rocode-lsp", "lsp-types"]

[dependencies]
rocode-core = { path = "../rocode-core" }
rocode-config = { path = "../rocode-config" }
rocode-util = { path = "../rocode-util" }
rocode-grep = { path = "../rocode-grep" }
rocode-plugin = { path = "../rocode-plugin" }
rocode-permission = { path = "../rocode-permission" }
rocode-orchestrator = { path = "../rocode-orchestrator" }
rocode-lsp = { path = "../rocode-lsp", optional = true }
lsp-types = { version = "0.97", optional = true }
tree-sitter = { workspace = true }
tree-sitter-bash = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
async-process = { workspace = true }
which = { workspace = true }
content_inspector = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
url = { workspace = true }
uuid = { workspace = true }
ast-grep-core = { workspace = true }
ast-grep-language = { workspace = true }
ast-grep-config = { workspace = true }
urlencoding = "2.1"
html2md = "0.2"
base64 = "0.22"
portable-pty = { workspace = true }

[dev-dependencies]
tempfile = "3"
