[package]
name = "rocode-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
rocode-core = { path = "../rocode-core" }
rocode-orchestrator = { path = "../rocode-orchestrator" }
rocode-util = { path = "../rocode-util" }
rocode-config = { path = "../rocode-config" }
rocode-provider = { path = "../rocode-provider" }
rocode-session = { path = "../rocode-session" }
rocode-agent = { path = "../rocode-agent" }
rocode-tool = { path = "../rocode-tool" }
rocode-mcp = { path = "../rocode-mcp" }
rocode-command = { path = "../rocode-command" }
rocode-types = { path = "../rocode-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
walkdir = { workspace = true }
syntect = { workspace = true }

# TUI dependencies
ratatui = "0.27"
crossterm = { version = "0.27", features = ["event-stream"] }
atty = "0.2"
nucleo-matcher = { workspace = true }
similar = { workspace = true }

# Additional dependencies
tokio-stream = { workspace = true }
futures = { workspace = true }
unicode-width = "0.1"
uuid = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
dirs = { workspace = true }
base64 = { workspace = true }
pulldown-cmark = "0.13"
